# weavenet

./: CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
docs/: .buildinfo  conf.py
docs/.doctrees/: environment.pickle  index.doctree
docs/.doctrees/API/: index.doctree  layers.doctree  losses.doctree  metrics.doctree  models.doctree  preference.doctree  sparse_layers.doctree  sparse_models.doctree
docs/API/: layers.rst  losses.rst  metrics.rst  models.rst  preference.rst  sparse_layers.rst  sparse_models.rst
docs/main/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/main/.doctrees/: environment.pickle  index.doctree
docs/main/.doctrees/API/: index.doctree  layers.doctree  losses.doctree  metrics.doctree  models.doctree  preference.doctree  sparse_layers.doctree  sparse_models.doctree
docs/main/API/: index.html  layers.html  losses.html  metrics.html  models.html  preference.html  sparse_layers.html  sparse_models.html
docs/main/_sources/API/: layers.rst.txt
docs_source/: conf.py  index.rst
docs_source/API/: index.rst  metrics.rst  models.rst  preference.rst  sparse_layers.rst  sparse_models.rst
src/weavenet/: __init__.py  criteria.py  layers.py  loss.py  metric.py  model.py  preference.py
src/weavenet/sparse/: layers.py  model.py
